Fixed some inheritence issues on the panelset.js. Fixed layout issues where two scrollbars were appearing in some panels.

--- a/digipal_text/static/digipal_text/viewer/tinymce.css
+++ b/digipal_text/static/digipal_text/viewer/tinymce.css
@@ -25,7 +25,7 @@ Generate a hash key from it and use it in the query string to force reload when 
 /* General */
 
 div.mce-content-body.preview {
-    margin: 8px;
+    padding: 8px;
 }
 
 .mce-content-body p, .mce-content-body div {
