--- a/digipal_text/static/digipal_text/viewer/viewer.css
+++ b/digipal_text/static/digipal_text/viewer/viewer.css
@@ -69,6 +69,7 @@ span.message-error {
 
 .ui-layout-pane {
     padding: 0 !important;
+    overflow: hidden !important;
 }
 
 .text-viewer-panel {
